--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -22,7 +22,7 @@
     
     <main>
         <div class="add-button-container">
-            <button onclick="window.location.href='/product/add';" id="add-product-button" class="add-product-btn" style="display: none;">Add Product</button>
+            <button onclick="window.location.href='/product/add';" id="add-product-button" class="add-product-btn" style="display: none;">เพิ่ม</button>
         </div>
         <div id="product-list"></div>
     </main>
