--- a/client/templates/product_add.html
+++ b/client/templates/product_add.html
@@ -16,31 +16,32 @@
     <main>
         <div class="product-detail">
             <form id="add-product-form">
-                <label for="mainImageUpload" class="file-upload-label">Upload Main Image:</label>
+                <h3>อัพโหลดรูปภาพหลัก</h3>
+                <label for="mainImageUpload" class="file-upload-label">อัพโหลดรูปภาพหลัก (เลือกไฟล์)</label>
                 <input type="file" id="mainImageUpload" accept="image/*" required class="file-upload-input">
                 <br>
                 <img id="mainImagePreview" src="" alt="Main Image Preview" style="display: none; max-width: 200px; margin-top: 10px;">
                 <br>
 
-                <label for="price">Price:</label>
+                <label for="price">ราคา :</label>
                 <input type="number" id="price" name="price" placeholder="Enter price" required>
                 <br>
 
-                <label for="description">Description:</label>
+                <label for="description">รายละเอียด :</label>
                 <textarea id="description" name="description" placeholder="Enter product description" required></textarea>
                 <br>
 
-                <h3>Additional Images:</h3>
+                <h3>อัพโหลดรูปภาพเพิ่มเติม</h3>
                 <div id="additional-images">
-                    <label for="additionalImagesUpload" class="file-upload-label">Upload Additional Images (max 25):</label>
+                    <label for="additionalImagesUpload" class="file-upload-label">อัพโหลดรูปภาพเพิ่มเติม (เลือกไฟล์)</label>
                     <input type="file" id="additionalImagesUpload" accept="image/*" multiple required class="file-upload-input">
-                    <p id="imageCountMessage">You can upload a maximum of 25 images.</p>
+                    <p id="imageCountMessage">คุณสามารถอัพโหลดรูปภาพเพิ่มเติมสูงสุด 25 รูป</p>
                     <p id="remainingImagesMessage"></p>
                     <div id="additionalImagesPreview" class="image-preview-container"></div>
                 </div>
                 <br>
 
-                <button type="submit">Add Product</button>
+                <button type="submit">เพิ่ม</button>
             </form>
             <a href="/" class="back-link">Back to Home</a>
         </div>
@@ -144,9 +145,9 @@
             const remainingImagesMessage = document.getElementById('remainingImagesMessage');
 
             if (remainingImages < 0) {
-                remainingImagesMessage.textContent = 'You have exceeded the limit of 25 images.';
+                remainingImagesMessage.textContent = 'คุณได้อัพโหลดรูป 25 ภาพแล้ว';
             } else {
-                remainingImagesMessage.textContent = `You can still upload ${remainingImages} more images.`;
+                remainingImagesMessage.textContent = `คุณสามารถอัพโหลดรูปภาพเพิ่มเติมได้อีก ${remainingImages} รูป`;
             }
 
             // Clear previous previews
