--- a/client/templates/product_edit.html
+++ b/client/templates/product_edit.html
@@ -71,7 +71,7 @@
     <footer>
         <p>&copy; 2024 Rov Store. All rights reserved.</p>
     </footer>
-
+    <script src="/config.js"></script>
     <script src="{{ url_for('static', filename='scripts/product_edit.js') }}"></script>
 </body>
 </html>
