--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -30,6 +30,7 @@
     <footer>
         <p>&copy; 2024 Rov Store. All rights reserved.</p>
     </footer>
+    <script src="/config.js"></script>
     <script src="{{ url_for('static', filename='scripts/index.js') }}"></script> <!-- Call the external JS file -->
 </body>
 </html>
