--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -21,6 +21,7 @@
             <button type="submit">Login</button>
         </form>
     </div>
+    <script src="/config.js"></script>
     <script src="{{ url_for('static', filename='scripts/login.js') }}"></script>
 </body>
 </html>
