--- a/client/templates/product_add.html
+++ b/client/templates/product_add.html
@@ -53,6 +53,7 @@
         <p>&copy; 2024 Rov Store. All rights reserved.</p>
     </footer>
     <!-- Include SweetAlert JS -->
+    <script src="/config.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="{{ url_for('static', filename='scripts/product_add.js') }}"></script> 
 </body>
