--- a/client/templates/product_detail.html
+++ b/client/templates/product_detail.html
@@ -45,7 +45,8 @@
     <footer>
         <p>&copy; 2024 Rov Store. All rights reserved.</p>
     </footer>
-
+    
+    <script src="/config.js"></script>
     <script src="{{ url_for('static', filename='scripts/product_detail.js') }}"></script>
 </body>
 </html>
