--- a/client/templates/product_add.html
+++ b/client/templates/product_add.html
@@ -45,7 +45,7 @@
 
                 <button type="submit">เพิ่ม</button>
             </form>
-            <a href="/" class="back-link">Back to Home</a>
+            <a href="/" class="back-link">กลับสู่หน้าหลัก</a>
         </div>
     </main>
 
