--- a/client/templates/product_detail.html
+++ b/client/templates/product_detail.html
@@ -46,7 +46,7 @@
         <p>&copy; 2024 Rov Store. All rights reserved.</p>
     </footer>
     
-    <script src="{{ url_for('config') }}"></script>
+    <script src="/config.js"></script>
     <script>
     // Function to set image sources dynamically
     document.addEventListener('DOMContentLoaded', function() {
